// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomBadge component match snapshot for 0 1`] = `null`;

exports[`CustomBadge component match snapshot for 10 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "#ED1727",
        "borderRadius": 13.5,
        "height": 27,
        "justifyContent": "center",
        "paddingBottom": 3,
        "paddingLeft": 6,
        "paddingRight": 6,
        "paddingTop": 3,
      },
      Object {
        "alignContent": "center",
        "backgroundColor": "#0066CC",
        "borderColor": "white",
        "borderWidth": 2,
        "bottom": 10,
        "elevation": 0.1,
        "height": 20,
        "justifyContent": "center",
        "left": 12,
        "paddingLeft": 0,
        "paddingRight": 0,
        "position": "absolute",
        "shadowColor": "white",
        "width": 20,
      },
      Object {
        "width": 24,
      },
    ]
  }
  testID="badgeTestID"
>
  <Text
    accessible={false}
    badge={true}
    importantForAccessibility="no-hide-descendants"
    style={
      Array [
        Object {
          "color": "#fff",
          "fontFamily": "System",
          "fontSize": 15,
          "lineHeight": 19,
          "paddingLeft": 3,
          "paddingRight": 3,
          "textAlign": "center",
        },
        Object {
          "paddingLeft": 0,
          "paddingRight": 0,
        },
      ]
    }
  >
    10
  </Text>
</View>
`;

exports[`CustomBadge component match snapshot for 100 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "#ED1727",
        "borderRadius": 13.5,
        "height": 27,
        "justifyContent": "center",
        "paddingBottom": 3,
        "paddingLeft": 6,
        "paddingRight": 6,
        "paddingTop": 3,
      },
      Object {
        "alignContent": "center",
        "backgroundColor": "#0066CC",
        "borderColor": "white",
        "borderWidth": 2,
        "bottom": 10,
        "elevation": 0.1,
        "height": 20,
        "justifyContent": "center",
        "left": 12,
        "paddingLeft": 0,
        "paddingRight": 0,
        "position": "absolute",
        "shadowColor": "white",
        "width": 20,
      },
      Object {
        "width": 28,
      },
    ]
  }
  testID="badgeTestID"
>
  <Text
    accessible={false}
    badge={true}
    importantForAccessibility="no-hide-descendants"
    style={
      Array [
        Object {
          "color": "#fff",
          "fontFamily": "System",
          "fontSize": 15,
          "lineHeight": 19,
          "paddingLeft": 3,
          "paddingRight": 3,
          "textAlign": "center",
        },
        Object {
          "paddingLeft": 0,
          "paddingRight": 0,
        },
      ]
    }
  >
    99+
  </Text>
</View>
`;
